# MapMetIP

./: .gitignore  Dockerfile  README.md  compress_h5.py  debug_file.json  debug_file_skip.json  download_zenodo.py  env.yml  main.py  requirements.yml  run_all.py  setup.cfg  startup.sh  test.ipynb
.ipynb_checkpoints/: main-checkpoint.py
MapMetIP/: normalize.py  register.py  roi.py  sample.py  skeleton_morphology.py
log_utils/: parse_logfiles.py
notebooks/: anonymization.ipynb  process_BM_sample.ipynb  process_BM_sample_allROI.ipynb  process_BM_sample_debug copy.ipynb  test_interactive.ipynb  testing.ipynb  testing_morph.ipynb
src/: background_correction.py  feature_extraction.py  lookup.py  morphology_functions.py  neighbors.py  normalize.py  preprocess.py  sample.py  segmentation.py  spillover.py  utils.py
src/MapMetIP/: background_correction.py  copy_files.py  intensity_functions.py  lookup.py  neighbors.py  sample.py  segmentation.py  spillover.py
src/MapMetIP.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: process_BM_sample.ipynb  process_BM_sample_allROI.ipynb  process_TU_sample.ipynb
tests/.ipynb_checkpoints/: test-checkpoint.py
