[metadata]
name = MapMetIP
version = 0.1.0
author = Daria Lazic, Simon Gutwein
author_email = daria.lazic@ccri.at
description = Image processing pipeline for multi-modal images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TaschnerMandlGroup/MapMetIP
project_urls =
    Bug Tracker = https://github.com/TaschnerMandlGroup/MapMetIP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
# If you have any minimal direct Python dependencies that are not covered by environment.yml, list them here, e.g.:
# install_requires =
#     numpy
#     pandas

[options.packages.find]
where = src