[metadata]
name = MapMetIP
version = 0.1.0
author = Daria Lazic, Simon Gutwein
author_email = daria.lazic@ccri.at
description = Image processing pipeline for multi-modal images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TaschnerMandlGroup/MapMetIP
project_urls =
    Bug Tracker = https://github.com/TaschnerMandlGroup/MapMetIP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
     numpy
     pandas

python_requires = >=3.6

package_dir =
    = src

[options.packages.find]
where = src